# zero_diff_drive

zero_diff_drive_description/: CMakeLists.txt  package.xml
zero_diff_drive_description/models/zero_diff_drive/: model.config  model.sdf
zero_diff_drive_gazebo/: CMakeLists.txt  package.xml
zero_diff_drive_gazebo/config/: zero_diff_drive_bridge.yaml
zero_diff_drive_gazebo/launch/: zero_diff_drive_gazebo.launch.py
zero_diff_drive_gazebo/worlds/: zero_diff_drive_world.sdf
